--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ar-SA.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ar-SA.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>شخصي</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>سياسة الخصوصية</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>الملف الشخصي</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>قالب</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>الشروط</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>غير مصرح</value>
