--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.vi-VN.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.vi-VN.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Cá nhân</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Chính sách bảo mật</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Hồ sơ</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Mẫu</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Điều khoản</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Không được ủy quyền</value>
