--- a/src/Aiursoft.CorpHome/Resources/Views/Shared/Components/MarketingFooter/Default.en-GB.resx
+++ b/src/Aiursoft.CorpHome/Resources/Views/Shared/Components/MarketingFooter/Default.en-GB.resx
@@ -45,6 +45,9 @@
   <data name="Licence" xml:space="preserve">
     <value>Licence</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Privacy Policy</value>
+  </data>
   <data name="Project" xml:space="preserve">
     <value>Project</value>
   </data>
@@ -59,6 +62,9 @@
   </data>
   <data name="Source Code" xml:space="preserve">
     <value>Source Code</value>
+  </data>
+  <data name="Terms of Service" xml:space="preserve">
+    <value>Terms of Service</value>
   </data>
 
 </root>
