--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.el-GR.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.el-GR.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>Με την υποβολή αυτού του φόρμας, επιβεβαιώνω ότι έχω διαβάσει και συμφωνώ με τους Όρους Χρήσης και την Πολιτική Απορρήτου της Aiursoft.</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>Με την υποβολή αυτού του φόρμα, επιβεβαιώνω ότι έχω διαβάσει και συμφωνώ με την Πολιτική Απορρήτου και την Πολιτική Απορρήτου της Canonical.</value>
   </data>
   <data name="Company" xml:space="preserve">
