--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.ja-JP.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.ja-JP.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>このフォームを送信することにより、私はAiursoftの利用規約およびプライバシーポリシーを確認し、それらに同意することを確認します。</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>このフォームを送信することで、私はCanonicalのプライバシーノートおよびプライバシーポリシーを確認し、それに同意することを確認します。</value>
   </data>
   <data name="Company" xml:space="preserve">
