--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.nl-NL.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.nl-NL.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>Door dit formulier in te dienen bevestig ik dat ik de Algemene Voorwaarden en Privacybeleid van Aiursoft heb gelezen en akkoord ga met deze.</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>Bij het indienen van dit formulier bevestig ik dat ik de Privacyverklaring en het Privacybeleid van Canonical heb gelezen en akkoord ga met deze.</value>
   </data>
   <data name="Company" xml:space="preserve">
