--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.pt-PT.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.pt-PT.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>Ao submeter este formulário, confirmo que li e aceito os Termos de Serviço e Política de Privacidade da Aiursoft.</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>Ao submeter este formulário, confirmo que li e concordo com o Aviso de Privacidade e a Política de Privacidade da Canonical.</value>
   </data>
   <data name="Company" xml:space="preserve">
