--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.ru-RU.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.ru-RU.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>Отправляя эту форму, я подтверждаю, что ознакомился с Условиями использования и Политикой конфиденциальности Aiursoft и согласен с ними.</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>Представляя эту форму, я подтверждаю, что ознакомился с уведомлением о конфиденциальности и политикой конфиденциальности Canonical и согласен с ними.</value>
   </data>
   <data name="Company" xml:space="preserve">
