--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.th-TH.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.th-TH.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>โดยการส่งแบบฟอร์มนี้ ฉันยืนยันว่าฉันได้อ่านและยอมรับข้อกำหนดการใช้งานและนโยบายความเป็นส่วนตัวของ Aiursoft</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>โดยการส่งแบบฟอร์มนี้ ฉันยืนยันว่าได้อ่านและยอมรับนโยบายความเป็นส่วนตัวและข้อกำหนดความเป็นส่วนตัวของ Canonical</value>
   </data>
   <data name="Company" xml:space="preserve">
