--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.uk-UA.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.uk-UA.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>Надсилаючи цю форму, я підтверджую, що ознайомився з Умовами надання послуг та Політикою конфіденційності Aiursoft і погоджуюсь з ними.</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>Надсилаючи цю форму, я підтверджую, що ознайомився і погоджуюся з Приміткою про конфіденційність та Політикою конфіденційності Canonical.</value>
   </data>
   <data name="Company" xml:space="preserve">
