--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.vi-VN.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.vi-VN.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>Bằng cách gửi biểu mẫu này, tôi xác nhận rằng tôi đã đọc và đồng ý với Điều khoản Dịch vụ và Chính sách Bảo mật của Aiursoft.</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>Bằng việc gửi biểu mẫu này, tôi xác nhận rằng tôi đã đọc và đồng ý với Thông báo Quyền riêng tư và Chính sách Quyền riêng tư của Canonical.</value>
   </data>
   <data name="Company" xml:space="preserve">
