--- a/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.zh-TW.resx
+++ b/src/Aiursoft.CorpHome/Resources/Models/HomeViewModels/ContactViewModel.zh-TW.resx
@@ -18,7 +18,10 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-      <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
+      <data name="By submitting this form, I confirm that I have read and agree to Aiursoft&apos;s Terms of Service and Privacy Policy." xml:space="preserve">
+    <value>提交此表單，即表示我已閱讀並同意 Aiursoft 的服務條款與隱私權政策。</value>
+  </data>
+  <data name="By submitting this form, I confirm that I have read and agree to Canonical&apos;s Privacy Notice and Privacy Policy." xml:space="preserve">
     <value>提交此表單，即表示我已閱讀並同意 Canonical 的隱私權公告與隱私權政策。</value>
   </data>
   <data name="Company" xml:space="preserve">
