--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.da-DK.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.da-DK.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Personlig</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Privatlivspolitik</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profil</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Skabelon</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Vilkår</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Uautoriseret</value>
