--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.de-DE.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.de-DE.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Persönlich</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Datenschutzbestimmungen</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profil</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Vorlage</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Allgemeine Geschäftsbedingungen</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Nicht autorisiert</value>
