--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.el-GR.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.el-GR.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Προσωπικά</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Πολιτική Απορρήτου</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Προφίλ</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Πρότυπο</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Όροι</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Μη Εξουσιοδοτημένος</value>
