--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.en-GB.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.en-GB.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Personal</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Privacy Policy</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profile</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Template</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Terms</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Unauthorised</value>
