--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.es-ES.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.es-ES.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Personal</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Política de privacidad</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Perfil</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Plantilla</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Términos</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>No autorizado</value>
