--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.id-ID.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.id-ID.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Pribadi</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Kebijakan Privasi</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profil</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Template</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Syarat dan Ketentuan</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Tidak Diizinkan</value>
