--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.it-IT.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.it-IT.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Personale</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Informativa sulla privacy</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profilo</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Modello</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Termini</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Non autorizzato</value>
