--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ja-JP.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ja-JP.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>個人</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>プライバシーポリシー</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>プロフィール</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>テンプレート</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>利用規約</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>権限がありません</value>
