--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ko-KR.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ko-KR.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>개인</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>개인정보 보호정책</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>프로필</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>템플릿</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>이용 약관</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>권한 없음</value>
