--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.pl-PL.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.pl-PL.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Osobiste</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Polityka Prywatności</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profil</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Szablon</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Warunki</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Nieautoryzowany</value>
