--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.pt-BR.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.pt-BR.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Pessoal</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Política de Privacidade</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Perfil</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Modelo</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Termos</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Não Autorizado</value>
