--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ro-RO.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.ro-RO.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Personal</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Politica de Confidențialitate</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profil</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Șablon</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Termeni</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Neautorizat</value>
