--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.sv-SE.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.sv-SE.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Personligt</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Integritetspolicy</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Profil</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Mall</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Villkor</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Obehörig</value>
