--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.uk-UA.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.uk-UA.resx
@@ -129,6 +129,9 @@
   <data name="Personal" xml:space="preserve">
     <value>Особисті</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Політика конфіденційності</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Профіль</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>Шаблон</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>Умови</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>Неавторизовано</value>
