--- a/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.zh-HK.resx
+++ b/src/Aiursoft.CorpHome/Resources/Services/ViewModelArgsInjector.zh-HK.resx
@@ -132,6 +132,9 @@
   <data name="Personal" xml:space="preserve">
     <value>個人</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>私隱政策</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>個人檔案</value>
   </data>
@@ -161,6 +164,9 @@
   </data>
   <data name="Template" xml:space="preserve">
     <value>範本</value>
+  </data>
+  <data name="Terms" xml:space="preserve">
+    <value>條款</value>
   </data>
   <data name="Unauthorized" xml:space="preserve">
     <value>未獲授權</value>
