--- a/src/Aiursoft.CorpHome/Resources/Views/Shared/Components/MarketingFooter/Default.zh-TW.resx
+++ b/src/Aiursoft.CorpHome/Resources/Views/Shared/Components/MarketingFooter/Default.zh-TW.resx
@@ -45,6 +45,9 @@
   <data name="Licence" xml:space="preserve">
     <value>授權條款</value>
   </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>隱私權政策</value>
+  </data>
   <data name="Project" xml:space="preserve">
     <value>專案</value>
   </data>
@@ -59,6 +62,9 @@
   </data>
   <data name="Source Code" xml:space="preserve">
     <value>原始碼</value>
+  </data>
+  <data name="Terms of Service" xml:space="preserve">
+    <value>服務條款</value>
   </data>
 
 </root>
